--- a/_data/program.yml
+++ b/_data/program.yml
@@ -42,7 +42,7 @@ days:
         subtitle: 鄭瑋 (台灣大學圖書資訊學系)
         category: 經驗分享 (1)：研究資料管理的新進發展與基礎設施
       - title: "ORCID: Case studies of Persistent Identifiers in Research Data Management"
-        subtitle: Estelle 鄭潔之 (ORCID)
+        subtitle: Estelle Cheng 鄭潔之 (ORCID)
         category: 經驗分享 (1)：研究資料管理的新進發展與基礎設施
       - title: "圖書館提供RDM服務的未來已來? 陽明交大起步走"
         subtitle: 王慧恆 (陽明交通大學圖書館)
