--- a/_data/program.yml
+++ b/_data/program.yml
@@ -44,7 +44,7 @@ days:
       - title: "ORCID: Case studies of Persistent Identifiers in Research Data Management"
         subtitle: Estelle Cheng 鄭潔之 (ORCID)
         category: 經驗分享 (1)：研究資料管理的新進發展與基礎設施
-      - title: "圖書館提供RDM服務的未來已來? 陽明交大起步走"
+      - title: "研究資料管理服務序曲永續影響」--由Dataverse的體現與推廣中啟航"
         subtitle: 王慧恆 (陽明交通大學圖書館)
         category: 經驗分享 (1)：研究資料管理的新進發展與基礎設施
       - title: "Omeka S作為大學圖書館數位典藏系統之應用"
