--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,8 +1,60 @@
-- name: 李承錱
-  affiliation: 中央研究院資訊科學研究所 技術經理
-  biography: 目前擔任「研究資料寄存所」(depositar / data.depositar.io) 的技術經理，負責該平台開發工作。近期研究主軸為資料流通標準、資訊系統自動化部署與長期維運，期許透過導入相關技術，以因應研究資料寄存所的持續發展需求。多年 Python 使用者。
-  img: cjlee.png
+- name: 王素芬
+  affiliation: 彰化師範大學地理學系 教授
+  biography:
+  img:
 - name: 王家薰
   affiliation: 中央研究院資訊科學研究所 專案經理
   biography: 曾參與在中央研究院執行的自由軟體鑄造場及台灣創用 CC 計畫。具工程師的背景並熱愛開放自由的風氣，關注數位保存及研究資料管理相關資訊，目前為研究資料管理計畫的專案經理，致力於推廣研究資料管理的概念並向下扎根。
   img: ally.jpg
+- name: 王慧恆
+  affiliation: 國立陽明交通大學圖書館 組長
+  biography:　王慧恆畢業於淡江大學資訊與圖書館學系碩士班，有約八年的教育部及國發會檔案管理局服務經歷，約二十年期間於圖書館服務，曾擔任陽明大學參考諮詢組組長、典藏閱覽組組長，目前為陽明交通大學推廣服務組組長，持續在第一線接收訊息，在資訊科技與資源工具瞬間翻新，師生的教學研究和學習方式不斷改變的趨動下，吸納新知並且與師生合作，期許成為好夥伴，時刻準備迎接＂未來＂，開展新好服務。
+  img:
+- name: 何明諠
+  affiliation: 中央研究院資訊科技創新研究中心 專案經理
+  biography:
+  img: 
+- name: 李承錱
+  affiliation: 中央研究院資訊科學研究所 技術經理
+  biography: 目前擔任「研究資料寄存所」(depositar / data.depositar.io) 的技術經理，負責該平台開發工作。近期研究主軸為資料流通標準、資訊系統自動化部署與長期維運，期許透過導入相關技術，以因應研究資料寄存所的持續發展需求。多年 Python 使用者。
+  img: cjlee.png
+- name: 莊庭瑞
+  affiliation: 中央研究院資訊科學研究所／中央研究院資訊科技創新研究中心 副研究員
+  biography:
+  img:
+- name: 陳慧華
+  affiliation: 臺灣大學圖書館系統資訊組 組長
+  biography: 陳慧華為臺灣大學圖書館系統資訊組組長，除負責系統相關的軟硬體維運、系統開發及建置外，同時負責機構典藏計畫的運作及鏈結資源系統的規劃和開發。除支援圖書館讀者、技術服務的需求外，作為學術圖書館的角色，期待在新科技的研究開發中尋求與圖書館服務契合的功能開發，在資源有限的環境裡盼對機構典藏系統開發、學術研究量能的共享上對圖書館夥伴有所貢獻。
+  img:
+- name: 曾虹文
+  affiliation: 綠色公民行動聯盟 副秘書長
+  biography:
+  img:
+- name: 黃誌川
+  affiliation: 台灣大學地理環境資源學系 教授
+  biography:
+  img:
+- name: 廖國偉
+  affiliation: 台灣大學生物環境系統工程學 教授
+  biography:
+  img:
+- name: 鄭美如
+  affiliation: 農業部林業試驗所 副研究員
+  biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
+  img: 
+- name: 鄭瑋
+  affiliation: 台灣大學圖書資訊學系 副教授
+  biography:
+  img:
+- name: 鄭潔之 (Estelle Cheng)
+  affiliation: ORCID Engagement Manager
+  biography:  
+  img: 
+- name: 劉子明
+  affiliation: 國家災害防救科技中心 助理研究員
+  biography: 劉子明博士現任於國家災害防救科技中心氣候變遷組，負責執行國科會-臺灣氣候變遷推估資訊與調適知識平台計畫，並擔任該計畫中的Team3分組小組長，負責「臺灣氣候變遷推估資訊與調適知識平台」(簡稱 TCCIP )的服務與推廣。TCCIP 是國內主要的氣候變遷資料、資訊與知識整合服務平台，已累積十多年的研究成果與資料，並對外提供服務，對於資料的儲存、發佈、更新、累積與傳遞必須格外重視，因此於 2019 年開始嘗試 Data Management Plan，以氣候變遷資料服務為出發點，擴展至整體計畫所有資料之管理。
+  img:
+- name: 盧鏡臣
+  affiliation: 中央警察大學防災研究所 副教授
+  biography:
+  img:
