--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -44,7 +44,7 @@
   img: 
 - name: 鄭瑋
   affiliation: 台灣大學圖書資訊學系 副教授
-  biography:
+  biography: 鄭瑋為美國匹茲堡大學資訊科學學院圖書資訊博士，目前研究專長為研究再現性（reproducibility）、資料素養、資料管治（management and governance）、資安人才培育等。鄭瑋現為國家資通安全研究院下人才培力中心主任，同時任教於國立臺灣大學圖書資訊學系，並為國研院國家高速網路與計算中心兼任副研究員，曾獲國科會年輕學者養成計畫（愛因斯坦）專題獎勵與臺大教學傑出獎（2019）。 有鑑於現今各界管理大量數據的需求日益增長，鄭瑋的長期研究興趣為探討各界對數位資料的需求與基礎建設（infrastructure），並探索數位時代人們在確保安全與隱私的狀況下，共享資料和資源。鄭瑋的著作目前發表於 TheWebConf、PLOS ONE、Journal of the Association for Information Science and Technology (JASIS&T) 等會議與期刊。
   img:
 - name: 鄭潔之 (Estelle Cheng)
   affiliation: ORCID Engagement Manager
