--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -9,7 +9,7 @@
 - name: 王慧恆
   affiliation: 國立陽明交通大學圖書館 組長
   biography: 王慧恆畢業於淡江大學資訊與圖書館學系碩士班，有約八年的教育部及國發會檔案管理局服務經歷，約二十年期間於圖書館服務，曾擔任陽明大學參考諮詢組組長、典藏閱覽組組長，目前為陽明交通大學推廣服務組組長，持續在第一線接收訊息，在資訊科技與資源工具瞬間翻新，師生的教學研究和學習方式不斷改變的趨動下，吸納新知並且與師生合作，期許成為好夥伴，時刻準備迎接＂未來＂，開展新好服務。
-  img:
+  img: hhwang.jpg
 - name: 何明諠
   affiliation: 中央研究院資訊科技創新研究中心 專案經理
   biography:
@@ -25,7 +25,7 @@
 - name: 陳慧華
   affiliation: 臺灣大學圖書館系統資訊組 組長
   biography: 陳慧華為臺灣大學圖書館系統資訊組組長，除負責系統相關的軟硬體維運、系統開發及建置外，同時負責機構典藏計畫的運作及鏈結資源系統的規劃和開發。除支援圖書館讀者、技術服務的需求外，作為學術圖書館的角色，期待在新科技的研究開發中尋求與圖書館服務契合的功能開發，在資源有限的環境裡盼對機構典藏系統開發、學術研究量能的共享上對圖書館夥伴有所貢獻。
-  img:
+  img: meg_profile.jpg
 - name: 曾虹文
   affiliation: 綠色公民行動聯盟 副秘書長
   biography:
@@ -41,15 +41,15 @@
 - name: 鄭美如
   affiliation: 農業部林業試驗所 副研究員
   biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
-  img: 
+  img: beer.jpg
 - name: 鄭瑋
   affiliation: 台灣大學圖書資訊學系 副教授
   biography: 鄭瑋為美國匹茲堡大學資訊科學學院圖書資訊博士，目前研究專長為研究再現性（reproducibility）、資料素養、資料管治（management and governance）、資安人才培育等。鄭瑋現為國家資通安全研究院下人才培力中心主任，同時任教於國立臺灣大學圖書資訊學系，並為國研院國家高速網路與計算中心兼任副研究員，曾獲國科會年輕學者養成計畫（愛因斯坦）專題獎勵與臺大教學傑出獎（2019）。 有鑑於現今各界管理大量數據的需求日益增長，鄭瑋的長期研究興趣為探討各界對數位資料的需求與基礎建設（infrastructure），並探索數位時代人們在確保安全與隱私的狀況下，共享資料和資源。鄭瑋的著作目前發表於 TheWebConf、PLOS ONE、Journal of the Association for Information Science and Technology (JASIS&T) 等會議與期刊。
-  img:
+  img: wjeng.jpeg
 - name: 鄭潔之 (Estelle Cheng)
   affiliation: ORCID Engagement Manager
   biography:  
-  img: 
+  img: Estelle.jpeg
 - name: 劉子明
   affiliation: 國家災害防救科技中心 助理研究員
   biography: 劉子明博士現任於國家災害防救科技中心氣候變遷組，負責執行國科會-臺灣氣候變遷推估資訊與調適知識平台計畫，並擔任該計畫中的Team3分組小組長，負責「臺灣氣候變遷推估資訊與調適知識平台」(簡稱 TCCIP )的服務與推廣。TCCIP 是國內主要的氣候變遷資料、資訊與知識整合服務平台，已累積十多年的研究成果與資料，並對外提供服務，對於資料的儲存、發佈、更新、累積與傳遞必須格外重視，因此於 2019 年開始嘗試 Data Management Plan，以氣候變遷資料服務為出發點，擴展至整體計畫所有資料之管理。
