--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -12,7 +12,7 @@
   img: hhwang.jpg
 - name: 何明諠
   affiliation: 中央研究院資訊科技創新研究中心 專案經理
-  biography:
+  biography: 目前任職於資訊科技創新研究中心，是協助執行資料管理方案（DMP）的聯絡窗口之一，同時也致力於資料政策分析，並提倡研究資料管理（RDM）。此外，他在中央研究院也參與了另一個關於隱私與資安的計畫。在加入 depositar 團隊前，他在台灣人權促進會致力於推動數位人權議題。
   img: 
 - name: 李承錱
   affiliation: 中央研究院資訊科學研究所 技術經理
@@ -32,11 +32,11 @@
   img:
 - name: 黃誌川
   affiliation: 台灣大學地理環境資源學系 教授
-  biography:
+  biography: 黃誌川教授是國立台灣大學地理環境資源研究所博士。攻讀博士學位其間，主要的研究領域水文模式模擬，包括了無限邊坡模式及TOPMODEL。在獲得博士學位後，先後於中央研究院生物多樣性研究中心、環境變遷研究中心擔任博士後研究員，主要的研究內容包括了集水區碳、氮循環、水文地形作用、集水區水文模擬。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。
   img:
 - name: 廖國偉
   affiliation: 台灣大學生物環境系統工程學 教授
-  biography:
+  biography: 
   img:
 - name: 鄭美如
   affiliation: 農業部林業試驗所 副研究員
@@ -48,7 +48,7 @@
   img: wjeng.jpeg
 - name: 鄭潔之 (Estelle Cheng)
   affiliation: ORCID Engagement Manager
-  biography:  
+  biography: Estelle 鄭潔之位於台灣，現職為ORCID Engagement Manager，主要職務為參與全球 ORCID 社群（亞太區域為主）、促進 ORCID 於學術傳播的應用實踐、支持 ORCID 會員機構包含大專院校、研究機構、出版商、政策智庫和學術服務供應商等。在加入 ORCID 之前，Estelle 曾在 Airiti 華藝數位公司擔任數位物件識別碼 (DOI) 產品經理。
   img: Estelle.jpeg
 - name: 劉子明
   affiliation: 國家災害防救科技中心 助理研究員
