--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -21,7 +21,7 @@
 - name: 莊庭瑞
   affiliation: 中央研究院資訊科學研究所／中央研究院資訊科技創新研究中心 副研究員
   biography: 莊庭瑞為中央研究院資訊科學研究所副研究員，同時合聘於人文社會科學研究中心（地理資訊科學研究專題中心）以及資訊科技創新研究中心。
-  img:
+  img: trc.jpg
 - name: 陳慧華
   affiliation: 臺灣大學圖書館系統資訊組 組長
   biography: 陳慧華為臺灣大學圖書館系統資訊組組長，除負責系統相關的軟硬體維運、系統開發及建置外，同時負責機構典藏計畫的運作及鏈結資源系統的規劃和開發。除支援圖書館讀者、技術服務的需求外，作為學術圖書館的角色，期待在新科技的研究開發中尋求與圖書館服務契合的功能開發，在資源有限的環境裡盼對機構典藏系統開發、學術研究量能的共享上對圖書館夥伴有所貢獻。
@@ -37,7 +37,7 @@
 - name: 廖國偉
   affiliation: 台灣大學生物環境系統工程學 教授
   biography: 
-  img:
+  img: kwl.jpg
 - name: 鄭美如
   affiliation: 農業部林業試驗所 副研究員
   biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
@@ -57,4 +57,4 @@
 - name: 盧鏡臣
   affiliation: 中央警察大學防災研究所 副教授
   biography:
-  img:
+  img: lcc.png
