--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -37,7 +37,7 @@
 - name: 廖國偉
   affiliation: 台灣大學生物環境系統工程學 教授
   biography: 
-  img: kwl.jpg
+  img: kwl.png
 - name: 鄭美如
   affiliation: 農業部林業試驗所 副研究員
   biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
@@ -53,7 +53,7 @@
 - name: 劉子明
   affiliation: 國家災害防救科技中心 助理研究員
   biography: 劉子明博士現任於國家災害防救科技中心氣候變遷組，負責執行國科會-臺灣氣候變遷推估資訊與調適知識平台計畫，並擔任該計畫中的Team3分組小組長，負責「臺灣氣候變遷推估資訊與調適知識平台」(簡稱 TCCIP )的服務與推廣。TCCIP 是國內主要的氣候變遷資料、資訊與知識整合服務平台，已累積十多年的研究成果與資料，並對外提供服務，對於資料的儲存、發佈、更新、累積與傳遞必須格外重視，因此於 2019 年開始嘗試 Data Management Plan，以氣候變遷資料服務為出發點，擴展至整體計畫所有資料之管理。
-  img: ted2.jpg
+  img: ted2.png
 - name: 盧鏡臣
   affiliation: 中央警察大學防災研究所 副教授
   biography:
