--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -41,7 +41,7 @@
 - name: 鄭美如
   affiliation: 農業部林業試驗所 副研究員
   biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
-  img: beer.jpg
+  img: beer.JPG
 - name: 鄭瑋
   affiliation: 台灣大學圖書資訊學系 副教授
   biography: 鄭瑋為美國匹茲堡大學資訊科學學院圖書資訊博士，目前研究專長為研究再現性（reproducibility）、資料素養、資料管治（management and governance）、資安人才培育等。鄭瑋現為國家資通安全研究院下人才培力中心主任，同時任教於國立臺灣大學圖書資訊學系，並為國研院國家高速網路與計算中心兼任副研究員，曾獲國科會年輕學者養成計畫（愛因斯坦）專題獎勵與臺大教學傑出獎（2019）。 有鑑於現今各界管理大量數據的需求日益增長，鄭瑋的長期研究興趣為探討各界對數位資料的需求與基礎建設（infrastructure），並探索數位時代人們在確保安全與隱私的狀況下，共享資料和資源。鄭瑋的著作目前發表於 TheWebConf、PLOS ONE、Journal of the Association for Information Science and Technology (JASIS&T) 等會議與期刊。
