--- a/_data/program.yml
+++ b/_data/program.yml
@@ -21,11 +21,11 @@ days:
       - time: 10:05 to 10:30
         title: 研究資料管理概述
         subtitle: 何明諠 (中央研究院資訊科技創新研究中心)
-        category: RDM 與 depositar
+        category: 研究資料管理與 depositar
       - time: 10:30 to 11:00
         title: 研究資料寄存所 (depositar) 簡介
         subtitle: 王家薰 (中央研究院資訊科學研究所)
-        category: RDM 與 depositar
+        category: 研究資料管理與 depositar
       - time: 11:00 to 11:15
         title: 休息
       - time: 11:15 to 11:45
