--- a/_data/index.yml
+++ b/_data/index.yml
@@ -5,6 +5,6 @@ buttons:
   - text: 地點
     url: /locations.html
     disabled: false
-  - text: 線上報名
+  - text: 報名
     url: /registration.html
     disabled: false
