--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -19,7 +19,7 @@
   biography: 目前擔任「研究資料寄存所」(depositar / data.depositar.io) 的技術經理，負責該平台開發工作。近期研究主軸為資料流通標準、資訊系統自動化部署與長期維運，期許透過導入相關技術，以因應研究資料寄存所的持續發展需求。多年 Python 使用者。
   img: cjlee.png
 - name: 莊庭瑞
-  affiliation: 中央研究院資訊科學研究所／中央研究院資訊科技創新研究中心 副研究員
+  affiliation: 中央研究院 資訊科學研究所／資訊科技創新研究中心／人文社會科學研究中心 副研究員
   biography: 莊庭瑞為中央研究院資訊科學研究所副研究員，同時合聘於人文社會科學研究中心（地理資訊科學研究專題中心）以及資訊科技創新研究中心。
   img: trc.jpg
 - name: 陳慧華
