--- a/_data/program.yml
+++ b/_data/program.yml
@@ -36,7 +36,7 @@ days:
         title: 午餐
       - time: 13:00 to 13:10
         title: 開場致詞
-        subtitle: TBC
+        subtitle: 李德財 院士
       - time: 13:10 to 14:30
         title: "用「研究資料管理」來支援學術誠信：淺談「有問題的研究實踐」 (QRPs)"
         subtitle: 鄭瑋 (台灣大學圖書資訊學系)
