--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,7 +1,7 @@
 - name: 王素芬
   affiliation: 彰化師範大學地理學系 教授
   biography: 王素芬為國立彰化師範大學地理教授並擔任空間資訊與社會防災研究中心主任，他的研究專長為空間資訊、森林生態系經營與地景變遷分析，目前主持長期社會生態核心觀測平台_彰化站。
-  img: WSF_600.jpg
+  img: WSF_new.jpg
 - name: 王家薰
   affiliation: 中央研究院資訊科學研究所 專案經理
   biography: 曾參與在中央研究院執行的自由軟體鑄造場及台灣創用 CC 計畫。具工程師的背景並熱愛開放自由的風氣，關注數位保存及研究資料管理相關資訊，目前為研究資料管理計畫的專案經理，致力於推廣研究資料管理的概念並向下扎根。
