--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -7,7 +7,7 @@
   biography: 曾參與在中央研究院執行的自由軟體鑄造場及台灣創用 CC 計畫。具工程師的背景並熱愛開放自由的風氣，關注數位保存及研究資料管理相關資訊，目前為研究資料管理計畫的專案經理，致力於推廣研究資料管理的概念並向下扎根。
   img: ally.jpg
 - name: 王慧恆
-  affiliation: 國立陽明交通大學圖書館 組長
+  affiliation: 陽明交通大學圖書館 組長
   biography: 王慧恆畢業於淡江大學資訊與圖書館學系碩士班，有約八年的教育部及國發會檔案管理局服務經歷，約二十年期間於圖書館服務，曾擔任陽明大學參考諮詢組組長、典藏閱覽組組長，目前為陽明交通大學推廣服務組組長，持續在第一線接收訊息，在資訊科技與資源工具瞬間翻新，師生的教學研究和學習方式不斷改變的趨動下，吸納新知並且與師生合作，期許成為好夥伴，時刻準備迎接＂未來＂，開展新好服務。
   img: hhwang.jpg
 - name: 何明諠
@@ -31,11 +31,11 @@
   biography:
   img: thw.jpg
 - name: 黃誌川
-  affiliation: 台灣大學地理環境資源學系 教授
-  biography: 黃誌川教授是國立台灣大學地理環境資源研究所博士。攻讀博士學位其間，主要的研究領域水文模式模擬，包括了無限邊坡模式及TOPMODEL。在獲得博士學位後，先後於中央研究院生物多樣性研究中心、環境變遷研究中心擔任博士後研究員，主要的研究內容包括了集水區碳、氮循環、水文地形作用、集水區水文模擬。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。
+  affiliation: 臺灣大學地理環境資源學系 教授
+  biography: 黃誌川教授是國立臺灣大學地理環境資源研究所博士。攻讀博士學位其間，主要的研究領域水文模式模擬，包括了無限邊坡模式及TOPMODEL。在獲得博士學位後，先後於中央研究院生物多樣性研究中心、環境變遷研究中心擔任博士後研究員，主要的研究內容包括了集水區碳、氮循環、水文地形作用、集水區水文模擬。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。
   img: jcHuang.jpg
 - name: 廖國偉
-  affiliation: 台灣大學生物環境系統工程學 教授
+  affiliation: 臺灣大學生物環境系統工程學 教授
   biography: 
   img: kwl.png
 - name: 鄭美如
@@ -43,12 +43,12 @@
   biography: 鄭美如為農業部林業試驗所技術服務組副研究員，主要負責應用系統規畫與管理、生態監測與研究資料管理、資通安全管理及個人資料保護相關業務。在校所學的是木材市場與環境經濟，2004年開始接觸生態資訊管理，成為林試所生態資訊研究小組主要成員之一，與團隊共同推動國內外生態研究資料倉儲與管理，以及資料開放與分享的理念推廣與實作。在推動林試所研究資料管理與開放的過程中，從一個團隊做到剩一個人，又從一個人堅持理念受到支持而擴展成一個團隊，在理念相同的團隊成員共同努力下，逐步建構林試所的研究資料管理與開放的框架。
   img: beer.JPG
 - name: 鄭瑋
-  affiliation: 台灣大學圖書資訊學系 副教授
+  affiliation: 臺灣大學圖書資訊學系 副教授
   biography: 鄭瑋為美國匹茲堡大學資訊科學學院圖書資訊博士，目前研究專長為研究再現性（reproducibility）、資料素養、資料管治（management and governance）、資安人才培育等。鄭瑋現為國家資通安全研究院下人才培力中心主任，同時任教於國立臺灣大學圖書資訊學系，並為國研院國家高速網路與計算中心兼任副研究員，曾獲國科會年輕學者養成計畫（愛因斯坦）專題獎勵與臺大教學傑出獎（2019）。 有鑑於現今各界管理大量數據的需求日益增長，鄭瑋的長期研究興趣為探討各界對數位資料的需求與基礎建設（infrastructure），並探索數位時代人們在確保安全與隱私的狀況下，共享資料和資源。鄭瑋的著作目前發表於 TheWebConf、PLOS ONE、Journal of the Association for Information Science and Technology (JASIS&T) 等會議與期刊。
   img: wjeng.jpeg
 - name: 鄭潔之 (Estelle Cheng)
   affiliation: ORCID Engagement Manager
-  biography: Estelle 鄭潔之位於台灣，現職為ORCID Engagement Manager，主要職務為參與全球 ORCID 社群（亞太區域為主）、促進 ORCID 於學術傳播的應用實踐、支持 ORCID 會員機構包含大專院校、研究機構、出版商、政策智庫和學術服務供應商等。在加入 ORCID 之前，Estelle 曾在 Airiti 華藝數位公司擔任數位物件識別碼 (DOI) 產品經理。
+  biography: Estelle 鄭潔之位於臺灣，現職為ORCID Engagement Manager，主要職務為參與全球 ORCID 社群（亞太區域為主）、促進 ORCID 於學術傳播的應用實踐、支持 ORCID 會員機構包含大專院校、研究機構、出版商、政策智庫和學術服務供應商等。在加入 ORCID 之前，Estelle 曾在 Airiti 華藝數位公司擔任數位物件識別碼 (DOI) 產品經理。
   img: Estelle.jpeg
 - name: 劉子明
   affiliation: 國家災害防救科技中心 助理研究員
