--- a/_data/program.yml
+++ b/_data/program.yml
@@ -42,7 +42,7 @@ days:
         category: 致詞
       - time: 13:10 to 14:30
         title: "用「研究資料管理」來支援學術誠信：淺談「有問題的研究實踐」 (QRPs)"
-        subtitle: 鄭瑋 (台灣大學圖書資訊學系)
+        subtitle: 鄭瑋 (臺灣大學圖書資訊學系)
         category: 研究資料管理的新近發展與基礎設施
       - title: "ORCID: Case studies of Persistent Identifiers in Research Data Management"
         subtitle: Estelle Cheng 鄭潔之 (ORCID)
@@ -51,19 +51,19 @@ days:
         subtitle: 王慧恆 (陽明交通大學圖書館)
         category: 研究資料管理的新近發展與基礎設施
       - title: "Omeka S 作為大學圖書館數位典藏系統之應用"
-        subtitle: 陳慧華 (台灣大學圖書館)
+        subtitle: 陳慧華 (臺灣大學圖書館)
         category: 研究資料管理的新近發展與基礎設施
       - time: 14:30 to 14:45
         title: 休息
       - time: 14:45 to 16:05
         title: "（題目待定）"
-        subtitle: 廖國偉 (台灣大學生物環境系統工程學)
+        subtitle: 廖國偉 (臺灣大學生物環境系統工程學)
         category: 研究資料管理規畫與實務
       - title: "（題目待定）"
         subtitle: 盧鏡臣 (中央警察大學防災研究所)
         category: 研究資料管理規畫與實務
       - title: "（題目待定）"
-        subtitle: 黃誌川 (台灣大學地理環境資源學系)
+        subtitle: 黃誌川 (臺灣大學地理環境資源學系)
         category: 研究資料管理規畫與實務
       - title: "LTSER 資料庫建置的現況與挑戰"
         subtitle: 王素芬 (彰化師範大學地理學系)
