--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -32,7 +32,7 @@
   img: thw.jpg
 - name: 黃誌川
   affiliation: 臺灣大學地理環境資源學系 教授
-  biography: 黃誌川教授是國立臺灣大學地理環境資源研究所博士。攻讀博士學位其間，主要的研究領域水文模式模擬，包括了無限邊坡模式及TOPMODEL。在獲得博士學位後，先後於中央研究院生物多樣性研究中心、環境變遷研究中心擔任博士後研究員，主要的研究內容包括了集水區碳、氮循環、水文地形作用、集水區水文模擬。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。
+  biography: 
   img: jcHuang.jpg
 - name: 廖國偉
   affiliation: 臺灣大學生物環境系統工程學 教授
