--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -8,7 +8,7 @@
   img: ally.jpg
 - name: 王慧恆
   affiliation: 陽明交通大學圖書館 組長
-  biography: 王慧恆畢業於淡江大學資訊與圖書館學系碩士班，有約八年的教育部及國發會檔案管理局服務經歷，約二十年期間於圖書館服務，曾擔任陽明大學參考諮詢組組長、典藏閱覽組組長，目前為陽明交通大學推廣服務組組長，持續在第一線接收訊息，在資訊科技與資源工具瞬間翻新，師生的教學研究和學習方式不斷改變的趨動下，吸納新知並且與師生合作，期許成為好夥伴，時刻準備迎接＂未來＂，開展新好服務。
+  biography: 王慧恆於圖書館服務約二十年，曾擔任陽明大學參考諮詢組組長、典藏閱覽組組長，目前為陽明交通大學推廣服務組組長，持續在第一線接收訊息，在資訊科技與資源工具瞬間翻新，師生的教學研究和學習方式不斷改變的趨動下，吸納新知並且與師生合作，期許成為好夥伴，時刻準備迎接＂未來＂，開展新好服務。
   img: hhwang.jpg
 - name: 何明諠
   affiliation: 中央研究院資訊科技創新研究中心 專案經理
@@ -28,7 +28,7 @@
   img: meg_profile.jpg
 - name: 曾虹文
   affiliation: 綠色公民行動聯盟 副秘書長
-  biography:
+  biography: 曾虹文是綠色公民行動聯盟的副秘書長，也是｢透明足跡｣計畫召集人，致力於找尋兼顧經濟發展與環境永續、公平正義之路。近年建立企業永續資料庫，透過數據資料，讓企業污染、農地工廠等爭議已久的環境議題，開啟社會對話，進行政策溝通。也開發了「淨零路徑模擬器」，用數據資料檢視企業的減碳承諾與路徑，希望能一起在台灣邁向永續的路上努力。
   img: thw.jpg
 - name: 黃誌川
   affiliation: 臺灣大學地理環境資源學系 教授
