--- a/_data/program.yml
+++ b/_data/program.yml
@@ -59,7 +59,7 @@ days:
         title: "（題目待定）"
         subtitle: 廖國偉 (臺灣大學生物環境系統工程學)
         category: 研究資料管理規畫與實務
-      - title: "（題目待定）"
+      - title: "永續科學團隊研究資料管理的行動研究"
         subtitle: 盧鏡臣 (中央警察大學防災研究所)
         category: 研究資料管理規畫與實務
       - title: "（題目待定）"
