--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -56,5 +56,5 @@
   img: ted2.png
 - name: 盧鏡臣
   affiliation: 中央警察大學防災研究所 副教授
-  biography: 盧鏡臣是中央警察大學防災研究所副教授，研究領域專注於災害防救、都市永續治理等議題。\n在災害防救領域，盧鏡臣目前專注於災後復原重建議題分析，剖析重大災害發生後，影響住宅重建的因素及影響層面，並依此成果建立重建進程評估模式。相關研究成果可引導權益關係者在災前預先推動重建整備；在災後增進重建品質及速度，並減緩災前的社會差異擴大。盧鏡臣也關注其他諸如疏散避難、收容安置、防災演習、風險溝通與社區防災、災害脆弱性/回復力分析等災害防救議題。在永續科學方面，盧副教授也參與國科會整合型計畫：都市永續轉型與韌性建構，並參與該整合型計畫資料管理計畫的規劃與執行。該計畫企盼透過資料管理計畫，降低團隊成員間的資料取得成本，增進團隊成員資料蒐集的標準化與精進，並透過研究資料公開，擴大學研成果的社會影響。
+  biography: 盧鏡臣是中央警察大學防災研究所副教授，研究領域專注於災害防救、都市永續治理等議題。在災害防救領域，盧鏡臣目前專注於災後復原重建議題分析，剖析重大災害發生後，影響住宅重建的因素及影響層面，並依此成果建立重建進程評估模式。相關研究成果可引導權益關係者在災前預先推動重建整備；在災後增進重建品質及速度，並減緩災前的社會差異擴大。盧鏡臣也關注其他諸如疏散避難、收容安置、防災演習、風險溝通與社區防災、災害脆弱性/回復力分析等災害防救議題。在永續科學方面，盧副教授也參與國科會整合型計畫：都市永續轉型與韌性建構，並參與該整合型計畫資料管理計畫的規劃與執行。該計畫企盼透過資料管理計畫，降低團隊成員間的資料取得成本，增進團隊成員資料蒐集的標準化與精進，並透過研究資料公開，擴大學研成果的社會影響。
   img: lcc.png
