--- a/_data/program.yml
+++ b/_data/program.yml
@@ -56,7 +56,7 @@ days:
       - time: 14:30 to 14:45
         title: 休息
       - time: 14:45 to 16:05
-        title: "流域水文水理分析DMP應用案例分享"
+        title: "流域水文水理分析 DMP 應用案例分享"
         subtitle: 廖國偉 (臺灣大學生物環境系統工程學)
         category: 研究資料管理規畫與實務
       - title: "永續科學團隊研究資料管理的行動研究"
@@ -77,7 +77,7 @@ days:
       - title: "以氣候變遷服務為導向的研究資料管理經驗談"
         subtitle: 劉子明 (國家災害防救科技中心)
         category: 資料共享與再利用
-      - title: "打造一個開放研究資料的友善環境-以林業試驗所為例"
+      - title: "打造一個開放研究資料的友善環境——以林業試驗所為例"
         subtitle: 鄭美如 (農業部林業試驗所)
         category: 資料共享與再利用
       - time: 17:20 to 17:30
