--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -52,7 +52,7 @@
   img: Estelle.jpeg
 - name: 劉子明
   affiliation: 國家災害防救科技中心 助理研究員
-  biography: 劉子明博士現任於國家災害防救科技中心氣候變遷組，負責執行國科會-臺灣氣候變遷推估資訊與調適知識平台計畫，並擔任該計畫中的Team3分組小組長，負責「臺灣氣候變遷推估資訊與調適知識平台」(簡稱 TCCIP )的服務與推廣。TCCIP 是國內主要的氣候變遷資料、資訊與知識整合服務平台，已累積十多年的研究成果與資料，並對外提供服務，對於資料的儲存、發佈、更新、累積與傳遞必須格外重視，因此於 2019 年開始嘗試 Data Management Plan，以氣候變遷資料服務為出發點，擴展至整體計畫所有資料之管理。
+  biography: 劉子明博士現任於國家災害防救科技中心氣候變遷組，負責執行國科會-臺灣氣候變遷推估資訊與調適知識平台計畫(簡稱 TCCIP )中的服務與推廣。TCCIP 是國內主要的氣候變遷資料、資訊與調適知識的服務平台，已累積十多年的研究成果與資料，並對外提供服務，對於研究資料的儲存、發佈、更新、累積與傳遞必須格外重視，因此於 2019 年開始嘗試 Data Management Plan，以氣候變遷資料服務為出發點，擴展至整體計畫所有資料之管理。
   img: ted2.png
 - name: 盧鏡臣
   affiliation: 中央警察大學防災研究所 副教授
