--- a/_data/program.yml
+++ b/_data/program.yml
@@ -62,7 +62,7 @@ days:
       - title: "永續科學團隊研究資料管理的行動研究"
         subtitle: 盧鏡臣 (中央警察大學防災研究所)
         category: 研究資料管理規畫與實務
-      - title: "（題目待定）"
+      - title: "高頻時序與多參數資料的即時環境生態監測：LTSER翡翠站的資料管理"
         subtitle: 黃誌川 (臺灣大學地理環境資源學系)
         category: 研究資料管理規畫與實務
       - title: "LTSER 資料庫建置的現況與挑戰"
