--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -32,8 +32,8 @@
   img: thw.jpg
 - name: 黃誌川
   affiliation: 臺灣大學地理環境資源學系 教授
-  biography: 
-  img: jcHuang.jpg
+  biography: 黃誌川教授是國立台灣大學地理環境資源教授兼系主任，研究專長為水文學與化學分析，研究興趣包括河溪流量模擬與停留時間、崩塌與輸砂、集水區碳氮循環與輸出、化學風化作用、河川營養鹽吸收與新陳代謝。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。建基於過去長期進行台灣河川水文與水質研究，近年配合國科會推動長期社會生態觀測策略，於台北水源特定區架設LTSER翡翠站森林茶園社會生態系統核心觀測站。除了彰顯臺灣典型丘陵區農林複合生態系統特色，也能反應已有或潛在社會需求，最重要的是能提供資料共享服務，擴大研究視野與實際應用需求。
+  img: jcHuang1.jpg
 - name: 廖國偉
   affiliation: 臺灣大學生物環境系統工程學 教授
   biography: 
