--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -18,10 +18,10 @@
   affiliation: 中央研究院資訊科學研究所 技術經理
   biography: 目前擔任「研究資料寄存所」(depositar / data.depositar.io) 的技術經理，負責該平台開發工作。近期研究主軸為資料流通標準、資訊系統自動化部署與長期維運，期許透過導入相關技術，以因應研究資料寄存所的持續發展需求。多年 Python 使用者。
   img: cjlee.png
-- name: 莊庭瑞
-  affiliation: 中央研究院 資訊科學研究所／資訊科技創新研究中心／人文社會科學研究中心 副研究員
-  biography: 莊庭瑞為中央研究院資訊科學研究所副研究員，同時合聘於人文社會科學研究中心（地理資訊科學研究專題中心）以及資訊科技創新研究中心。
-  img: trc.jpg
+# - name: 莊庭瑞
+#  affiliation: 中央研究院 資訊科學研究所／資訊科技創新研究中心／人文社會科學研究中心 副研究員
+#  biography: 莊庭瑞為中央研究院資訊科學研究所副研究員，同時合聘於人文社會科學研究中心（地理資訊科學研究專題中心）以及資訊科技創新研究中心。
+#  img: trc.jpg
 - name: 陳慧華
   affiliation: 臺灣大學圖書館系統資訊組 組長
   biography: 陳慧華為臺灣大學圖書館系統資訊組組長，除負責系統相關的軟硬體維運、系統開發及建置外，同時負責機構典藏計畫的運作及鏈結資源系統的規劃和開發。除支援圖書館讀者、技術服務的需求外，作為學術圖書館的角色，期待在新科技的研究開發中尋求與圖書館服務契合的功能開發，在資源有限的環境裡盼對機構典藏系統開發、學術研究量能的共享上對圖書館夥伴有所貢獻。
