--- a/_data/program.yml
+++ b/_data/program.yml
@@ -81,7 +81,7 @@ days:
         title: 主持人
         subtitle: 林登秋 (臺灣師範大學 生命科學系)
         category: 致詞、主持
-      - title: "資料驅動政府決策改變的可能性，以透明足跡為例"
+      - title: "資料驅動政府決策改變的可能性——以透明足跡為例"
         subtitle: 曾虹文 (綠色公民行動聯盟)
         category: 資料共享與再利用
       - title: "以氣候變遷服務為導向的研究資料管理經驗談"
