--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -22,14 +22,18 @@
 #  affiliation: 中央研究院 資訊科學研究所／資訊科技創新研究中心／人文社會科學研究中心 副研究員
 #  biography: 莊庭瑞為中央研究院資訊科學研究所副研究員，同時合聘於人文社會科學研究中心（地理資訊科學研究專題中心）以及資訊科技創新研究中心。
 #  img: trc.jpg
+- name: 莊冠駿 (ddio)
+  affiliation: 綠色公民行動聯盟 理事
+  biography: 自 2020 年起加入「透明足跡」計畫，以專案經理、使用者體驗設計師、軟體工程師的角色，協助各項子計畫的推行。希望透過這樣的合作，讓公民倡議團體，在開啟社會對話、政策溝通，讓台灣邁向永續的同時，也能走出屬於在地非營利團體的數據治理之路。
+  img: ddio.jpg
 - name: 陳慧華
   affiliation: 臺灣大學圖書館系統資訊組 組長
   biography: 陳慧華為臺灣大學圖書館系統資訊組組長，除負責系統相關的軟硬體維運、系統開發及建置外，同時負責機構典藏計畫的運作及鏈結資源系統的規劃和開發。除支援圖書館讀者、技術服務的需求外，作為學術圖書館的角色，期待在新科技的研究開發中尋求與圖書館服務契合的功能開發，在資源有限的環境裡盼對機構典藏系統開發、學術研究量能的共享上對圖書館夥伴有所貢獻。
   img: meg_profile.jpg
-- name: 曾虹文
-  affiliation: 綠色公民行動聯盟 副秘書長
-  biography: 曾虹文是綠色公民行動聯盟的副秘書長，也是｢透明足跡｣計畫召集人，致力於找尋兼顧經濟發展與環境永續、公平正義之路。近年建立企業永續資料庫，透過數據資料，讓企業污染、農地工廠等爭議已久的環境議題，開啟社會對話，進行政策溝通。也開發了「淨零路徑模擬器」，用數據資料檢視企業的減碳承諾與路徑，希望能一起在台灣邁向永續的路上努力。
-  img: thw.jpg
+# - name: 曾虹文
+#  affiliation: 綠色公民行動聯盟 副秘書長
+#  biography: 曾虹文是綠色公民行動聯盟的副秘書長，也是｢透明足跡｣計畫召集人，致力於找尋兼顧經濟發展與環境永續、公平正義之路。近年建立企業永續資料庫，透過數據資料，讓企業污染、農地工廠等爭議已久的環境議題，開啟社會對話，進行政策溝通。也開發了「淨零路徑模擬器」，用數據資料檢視企業的減碳承諾與路徑，希望能一起在台灣邁向永續的路上努力。
+#  img: thw.jpg
 - name: 黃誌川
   affiliation: 臺灣大學地理環境資源學系 教授
   biography: 黃誌川教授是國立台灣大學地理環境資源教授兼系主任，研究專長為水文學與化學分析，研究興趣包括河溪流量模擬與停留時間、崩塌與輸砂、集水區碳氮循環與輸出、化學風化作用、河川營養鹽吸收與新陳代謝。參與的學術團體包括了EGU (European Geophysics Union)、AGU (American Geophysics Union)及IAEH (International Association for Environmental Hydrology) 並擔任中華民國土木水利工程會刊、地理學報及Paddy and Water Environment期刊論文審查者。建基於過去長期進行台灣河川水文與水質研究，近年配合國科會推動長期社會生態觀測策略，於台北水源特定區架設LTSER翡翠站森林茶園社會生態系統核心觀測站。除了彰顯臺灣典型丘陵區農林複合生態系統特色，也能反應已有或潛在社會需求，最重要的是能提供資料共享服務，擴大研究視野與實際應用需求。
