--- a/_data/program.yml
+++ b/_data/program.yml
@@ -64,7 +64,7 @@ days:
         subtitle: 鄭瑋 (臺灣大學 圖書資訊學系)
         category: 致詞、主持
       - title: "流域水文水理分析 DMP 應用案例分享"
-        subtitle: 廖國偉 (臺灣大學 生物環境系統工程學)
+        subtitle: 廖國偉 (臺灣大學 生物環境系統工程學系)
         category: 研究資料管理規畫與實務
       - title: "永續科學團隊研究資料管理的行動研究"
         subtitle: 盧鏡臣 (中央警察大學 防災研究所)
