--- a/_data/program.yml
+++ b/_data/program.yml
@@ -23,17 +23,19 @@ days:
         category: 致詞、主持
       - time: 10:05 to 10:30
         title: 研究資料管理概述
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-1-p
         subtitle: 何明諠 (中央研究院 資訊科技創新研究中心)
         category: 研究資料管理與 depositar
       - time: 10:30 to 11:00
         title: 研究資料寄存所 (depositar) 簡介
-        subtitle: 王家薰 (中央研究院 資訊科學研究所)
         slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-2-p
+        subtitle: 王家薰 (中央研究院 資訊科學研究所)
         category: 研究資料管理與 depositar
       - time: 11:00 to 11:15
         title: 休息
       - time: 11:15 to 11:45
         title: 資料寄存實作與問答
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-3-p
         subtitle: 李承錱 (中央研究院 資訊科學研究所)
         category: 研究資料管理與 depositar
       - time: 11:45 to 13:00
@@ -50,9 +52,11 @@ days:
         subtitle: 鄭瑋 (臺灣大學 圖書資訊學系)
         category: 研究資料管理的新近發展與基礎設施
       - title: "ORCID: Case studies of Persistent Identifiers in Research Data Management"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-2-2-p
         subtitle: Estelle Cheng 鄭潔之 (ORCID)
         category: 研究資料管理的新近發展與基礎設施
       - title: "「研究資料管理服務序曲永續影響」——由 Dataverse 的體現與推廣中啟航"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-2-3-p
         subtitle: 王慧恆 (陽明交通大學 圖書館)
         category: 研究資料管理的新近發展與基礎設施
       - title: "Omeka S 作為大學圖書館數位典藏系統之應用"
@@ -65,15 +69,19 @@ days:
         subtitle: 鄭瑋 (臺灣大學 圖書資訊學系)
         category: 致詞、主持
       - title: "流域水文水理分析 DMP 應用案例分享"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-1-p
         subtitle: 廖國偉 (臺灣大學 生物環境系統工程學系)
         category: 研究資料管理規畫與實務
       - title: "永續科學團隊研究資料管理的行動研究"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-2-p
         subtitle: 盧鏡臣 (中央警察大學 防災研究所)
         category: 研究資料管理規畫與實務
       - title: "高頻時序與多參數資料的即時環境生態監測：LTSER 翡翠站的資料管理"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-3-p
         subtitle: 黃誌川 (臺灣大學 地理環境資源學系)
         category: 研究資料管理規畫與實務
       - title: "LTSER 資料庫建置的現況與挑戰"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-4-p
         subtitle: 王素芬 (彰化師範大學 地理學系)
         category: 研究資料管理規畫與實務
       - time: 16:05 to 16:20
@@ -83,12 +91,15 @@ days:
         subtitle: 林登秋 (臺灣師範大學 生命科學系)
         category: 致詞、主持
       - title: "資料驅動政府決策改變的可能性——以透明足跡為例"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-1-p
         subtitle: ddio 莊冠駿 (綠色公民行動聯盟)
         category: 資料共享與再利用
       - title: "以氣候變遷服務為導向的研究資料管理經驗談"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-2-p
         subtitle: 劉子明 (國家災害防救科技中心)
         category: 資料共享與再利用
       - title: "打造一個開放研究資料的友善環境——以林業試驗所為例"
+        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-3-p
         subtitle: 鄭美如 (農業部 林業試驗所)
         category: 資料共享與再利用
       - time: 17:20 to 17:30
