--- a/_data/program.yml
+++ b/_data/program.yml
@@ -23,19 +23,19 @@ days:
         category: 致詞、主持
       - time: 10:05 to 10:30
         title: 研究資料管理概述
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-1-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/130d00c8-abff-4f5c-aabb-2d9323399727
         subtitle: 何明諠 (中央研究院 資訊科技創新研究中心)
         category: 研究資料管理與 depositar
       - time: 10:30 to 11:00
         title: 研究資料寄存所 (depositar) 簡介
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-2-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/2b8ab91a-e42c-4b96-9335-6d8cc9eec18a 
         subtitle: 王家薰 (中央研究院 資訊科學研究所)
         category: 研究資料管理與 depositar
       - time: 11:00 to 11:15
         title: 休息
       - time: 11:15 to 11:45
         title: 資料寄存實作與問答
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-1-3-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/7944a857-1c06-4022-98b3-7b7954e75a19
         subtitle: 李承錱 (中央研究院 資訊科學研究所)
         category: 研究資料管理與 depositar
       - time: 11:45 to 13:00
@@ -52,7 +52,7 @@ days:
         subtitle: 鄭瑋 (臺灣大學 圖書資訊學系)
         category: 研究資料管理的新近發展與基礎設施
       - title: "ORCID: Case studies of Persistent Identifiers in Research Data Management"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-2-2-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/70df91fc-41d8-4edd-866f-478a1a03b029 
         subtitle: Estelle Cheng 鄭潔之 (ORCID)
         category: 研究資料管理的新近發展與基礎設施
       - title: "「研究資料管理服務序曲永續影響」——由 Dataverse 的體現與推廣中啟航"
@@ -69,19 +69,19 @@ days:
         subtitle: 鄭瑋 (臺灣大學 圖書資訊學系)
         category: 致詞、主持
       - title: "流域水文水理分析 DMP 應用案例分享"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-1-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/3380a114-12ae-4f99-84aa-feb2a6a97172 
         subtitle: 廖國偉 (臺灣大學 生物環境系統工程學系)
         category: 研究資料管理規畫與實務
       - title: "永續科學團隊研究資料管理的行動研究"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-2-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/e9683a73-5784-45f7-988d-6244f5d659b5 
         subtitle: 盧鏡臣 (中央警察大學 防災研究所)
         category: 研究資料管理規畫與實務
       - title: "高頻時序與多參數資料的即時環境生態監測：LTSER 翡翠站的資料管理"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-3-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/a84b7583-8da6-4a10-9aaf-9009be85f0a9 
         subtitle: 黃誌川 (臺灣大學 地理環境資源學系)
         category: 研究資料管理規畫與實務
       - title: "LTSER 資料庫建置的現況與挑戰"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-3-4-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/94b9f5ed-be2f-4bed-8dec-88006269c8c9 
         subtitle: 王素芬 (彰化師範大學 地理學系)
         category: 研究資料管理規畫與實務
       - time: 16:05 to 16:20
@@ -91,15 +91,15 @@ days:
         subtitle: 林登秋 (臺灣師範大學 生命科學系)
         category: 致詞、主持
       - title: "資料驅動政府決策改變的可能性——以透明足跡為例"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-1-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/9fb0f5e2-cf0e-4abc-8ed6-3cb719c1c59d 
         subtitle: ddio 莊冠駿 (綠色公民行動聯盟)
         category: 資料共享與再利用
       - title: "以氣候變遷服務為導向的研究資料管理經驗談"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-2-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/b33681db-84cf-4e80-b63b-2086165d10d1 
         subtitle: 劉子明 (國家災害防救科技中心)
         category: 資料共享與再利用
       - title: "打造一個開放研究資料的友善環境——以林業試驗所為例"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-4-3-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/7667cf65-bb18-45d3-9388-aa52d5040041 
         subtitle: 鄭美如 (農業部 林業試驗所)
         category: 資料共享與再利用
       - time: 17:20 to 17:30
