--- a/_data/program.yml
+++ b/_data/program.yml
@@ -56,7 +56,7 @@ days:
         subtitle: Estelle Cheng 鄭潔之 (ORCID)
         category: 研究資料管理的新近發展與基礎設施
       - title: "「研究資料管理服務序曲永續影響」——由 Dataverse 的體現與推廣中啟航"
-        slides_url: https://m.odw.tw/u/odw/m/rdmw2023-2-3-p
+        slides_url: https://data.depositar.io/dataset/2023-rdm-workshop/resource/569dd29a-77f7-418f-a773-2d3c55b214e2 
         subtitle: 王慧恆 (陽明交通大學 圖書館)
         category: 研究資料管理的新近發展與基礎設施
       - title: "Omeka S 作為大學圖書館數位典藏系統之應用"
